<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.os.vee.ui.auth.LoginActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="loading"
            type="Boolean" />

        <variable
            name="valid"
            type="Boolean" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:src="@drawable/login_bg_2"
            android:contentDescription="@string/login_background" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{loading ? View.VISIBLE : View.GONE}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    app:srcCompat="@drawable/vee_logo_vector"
                    android:contentDescription="@string/vee_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:gravity="center"
                    android:text="@string/login_message"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:theme="@style/WhiteInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/hint_password"
                    android:theme="@style/WhiteInputLayout"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/signInButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:enabled="@{!loading &amp;&amp; valid}"
                    android:padding="16dp"
                    android:text="@string/login_label"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:alpha="0.5"
                    android:background="@color/white" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/googleSignInButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:enabled="@{!loading}"
                    app:buttonSize="wide" />

                <Button
                    android:id="@+id/createAccountButton"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:enabled="@{!loading}"
                    android:text="@string/create_account_label"
                    android:textColor="@color/white" />
            </LinearLayout>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>