<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.google.firebase.auth.FirebaseUser" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ProfileTheme"
        tools:context="com.os.vee.ui.home.HomeActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:contentDescription="@string/login_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/login_bg_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userPhoto"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="3dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:placeholder="@{@drawable/ic_account}"
                    app:url="@{user.photoUrl}"
                    tools:srcCompat="@drawable/ic_account" />

                <EditText
                    android:id="@+id/userDisplayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:gravity="center"
                    android:hint="@string/your_name"
                    android:inputType="textCapWords"
                    android:padding="4dp"
                    android:text="@{user.displayName}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userPhoto"
                    tools:text="Omar Sahl" />

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@{user.email}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userName"
                    tools:text="omar753sahl@gmail.com" />

                <Button
                    android:id="@+id/logoutButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/logout"
                    android:theme="@style/ProfileTheme" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />
            </LinearLayout>

        </FrameLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/editProfileFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:contentDescription="@string/edit_profile_button_cd"
            android:layout_margin="16dp"
            app:backgroundTint="@color/white"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_edit" />
    </android.support.design.widget.CoordinatorLayout>
</layout>
